--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0"
   },
