--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   },
   "scripts": {
     "start": "nodemon app.js"
-  }
+  },
+  "name": "auth-server",
+  "version": "1.0.0",
+  "main": "app.js",
+  "repository": "git@github.com:andygock/auth-server.git",
+  "author": "Andy Gock <andy@gock.net>",
+  "license": "MIT"
 }
