--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.5.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nocache": "^4.0.0"
   },
   "scripts": {
     "start": "node app.js",
