--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nocache": "^4.0.0"
   },
   "scripts": {
     "start": "node app.js",
